crates/ruff_python_parser/tests/snapshots/invalid_syntax@function_def_empty_body.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/function_def_empty_body.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..36,
        body: [
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 0..10,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 4..7,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 7..9,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: None,
                    body: [],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
            FunctionDef(
                StmtFunctionDef {
                    node_index: NodeIndex(None),
                    range: 11..28,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 15..18,
                        node_index: NodeIndex(None),
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 18..20,
                        node_index: NodeIndex(None),
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                        runtime_defaults: None,
                    },
                    returns: Some(
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 24..27,
                                id: Name("int"),
                                ctx: Load,
                            },
                        ),
                    ),
                    body: [],
                    runtime_decorator_list: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                    runtime_body: None,
                },
            ),
            Assign(
                StmtAssign {
                    node_index: NodeIndex(None),
                    range: 29..35,
                    targets: [
                        Name(
                            ExprName {
                                node_index: NodeIndex(None),
                                range: 29..30,
                                id: Name("x"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: NumberLiteral(
                        ExprNumberLiteral {
                            node_index: NodeIndex(None),
                            range: 33..35,
                            value: Int(
                                42,
                            ),
                        },
                    ),
                    runtime_targets: None,
                    runtime_type_comment: None,
                    runtime_type_comment_bytes: None,
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | def foo():
2 | def foo() -> int:
  | ^^^ Syntax Error: expected an indented block after function definition
3 | x = 42
  |


  |
1 | def foo():
2 | def foo() -> int:
3 | x = 42
  | ^ Syntax Error: expected an indented block after function definition
